--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@ html,body{height:100%;margin:0}
 body{
   font-family: Inter, Arial, Helvetica, sans-serif;
   color: #e6f7ff;
+  height:100vh;
   display:flex;
-  flex-direction:column;
   align-items:center;
-  justify-content:flex-start;
-  min-height:100vh;
+  justify-content:center;
   background: linear-gradient(-45deg, #04040f, #060b18, #050510, #0f1220);
   background-size: 400% 400%;
   animation: bgMove 14s ease infinite;
+  overflow:hidden;
 }
 @keyframes bgMove{
   0%{background-position:0% 50%}
@@ -35,12 +35,15 @@ body{
 /* ---------- App Layout ---------- */
 .app{
   display:flex;
+  flex-direction:row;
   gap:32px;
   align-items:flex-start;
   width:min(1100px,96vw);
   padding:18px;
-  flex-wrap: wrap;
-  justify-content:center;
+  position:relative;
+}
+@media(max-width:900px){
+  .app{ flex-direction:column-reverse; gap:18px; align-items:center; }
 }
 
 /* ---------- Sidebar Controls ---------- */
@@ -60,9 +63,9 @@ body{
 label{ display:block; font-size:13px; color:var(--muted); margin-bottom:6px; }
 .small-muted{ font-size:13px; color:var(--muted); }
 
-.button-row{ display:flex; gap:8px; flex-wrap:wrap; }
-button,input[type="number"]{
-  padding:8px 10px;
+.button-row{ display:flex; gap:8px; }
+button,input[type="number"], select{
+  padding:10px 12px;
   border-radius:10px;
   border:1px solid rgba(255,255,255,0.06);
   background: rgba(255,255,255,0.02);
@@ -79,7 +82,7 @@ button.primary{
 }
 .preset-row{ display:flex; gap:8px; flex-wrap:wrap;}
 .preset-btn{
-  padding:6px 10px;
+  padding:8px 10px;
   background:transparent;
   border:1px solid rgba(255,255,255,0.04);
   color:#cfefff;
@@ -94,10 +97,12 @@ button.primary{
 
 /* ---------- Scoreboard ---------- */
 .scoreboard-top{
-  position:sticky;
-  top:10px;
+  position:absolute;
+  left:50%;
+  transform:translateX(-50%);
+  top:18px;
   background:linear-gradient(180deg, rgba(6,8,15,0.9), rgba(8,12,24,0.7));
-  padding:12px 20px;
+  padding:14px 26px;
   border-radius:14px;
   border:1px solid rgba(255,255,255,0.04);
   box-shadow:0 12px 40px rgba(2,6,23,0.65);
@@ -110,10 +115,10 @@ button.primary{
 .score-pill{
   font-weight:800;
   color:var(--accent);
-  font-size:16px;
+  font-size:18px;
   text-shadow:0 0 10px rgba(8,246,255,0.06);
 }
-.match-info{ color:var(--muted); font-size:14px; }
+.match-info{ color:var(--muted); font-size:15px; }
 #winnerText{
   margin-left:8px;
   font-weight:900;
@@ -139,17 +144,13 @@ button.primary{
 .board-area{ display:flex; align-items:center; justify-content:center; width:100% }
 #board-wrapper{
   position:relative;
-  padding:18px;
+  padding:16px;
   border-radius:26px;
   display:flex;
   align-items:center;
   justify-content:center;
-  min-width:320px;
-  max-width:600px;
-  width:90vw;
+  min-width:min(420px,90vw);
 }
-
-/* Neon background glow */
 #board-wrapper::before{
   content:"";
   position:absolute;
@@ -162,114 +163,90 @@ button.primary{
   z-index:10;
   pointer-events:none;
 }
-@keyframes neonRun{
-  0%{background-position:0% 0%} 100%{background-position:100% 100%}
-}
-@keyframes neonBlurPulse{
-  0%,100%{filter:blur(8px) saturate(1.1)}
-  50%{filter:blur(14px) saturate(1.2)}
-}
+@keyframes neonRun{0%{background-position:0% 0%}100%{background-position:400% 0%}}
+@keyframes neonBlurPulse{0%,100%{opacity:.65}50%{opacity:.85}}
 
-/* Slanted scanlines */
-#board-wrapper::after {
-  content:"";
-  position:absolute;
-  inset:-6px;
-  border-radius:30px;
-  background: repeating-linear-gradient(
-    45deg,
-    #ff00ff 0px,
-    #ff00ff 2px,
-    #00ffff 2px,
-    #00ffff 4px
-  );
-  z-index:11;
-  pointer-events:none;
-  opacity:0.25;
-  animation: scanlineMove 1s linear infinite;
-  filter: blur(6px) saturate(1.1);
-}
-@keyframes scanlineMove {
-  0% { background-position: 0 0; }
-  100% { background-position: 20px 20px; }
-}
-
-/* ---------- Board Inner ---------- */
 #board-wrapper .inner{
   position:relative;
   z-index:20;
-  padding:18px;
+  padding:16px;
   border-radius:18px;
   background:linear-gradient(180deg, rgba(5,8,20,0.75), rgba(8,12,28,0.6));
   box-shadow: inset 0 2px 18px rgba(0,0,0,0.6);
   border:1px solid rgba(255,255,255,0.03);
-  width:100%;
 }
 
 /* ---------- Board Grid & Cells ---------- */
-#board{ display:grid; gap:6px; justify-content:center; }
+#board{ display:grid; gap:6px; }
 .cell{
-  width:calc((100% - ((var(--cols,3)-1)*6px))/var(--cols,3));
-  aspect-ratio:1/1;
+  width:80px;
+  height:80px;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:3.5vw;
+  font-size:38px;
   font-weight:900;
-  border-radius:10px;
+  border-radius:12px;
   background:linear-gradient(180deg, rgba(8,10,18,0.92), rgba(6,8,14,0.9));
   color:#e6f7ff;
   cursor:pointer;
   user-select:none;
   border:1px solid rgba(255,255,255,0.03);
   transition: transform .14s ease, box-shadow .18s ease, background .2s;
+  text-shadow:0 4px 12px rgba(0,0,0,0.45);
   position:relative;
-  overflow:hidden;
 }
-.cell::after{
-  content:'';
-  position:absolute;
-  inset:0;
-  background: repeating-linear-gradient(
-    45deg,
-    rgba(8,246,255,0.12),
-    rgba(8,246,255,0.12) 2px,
-    rgba(8,246,255,0) 5px
-  );
-  transform: translateX(-120%) skewX(-20deg);
-  animation: neonWave 1.6s linear infinite;
-  pointer-events: none;
-}
-@keyframes neonWave {
-  0% { transform: translateX(-120%) skewX(-20deg); }
-  100% { transform: translateX(120%) skewX(-20deg); }
-}
-
-/* Cell hover & win effects */
 .cell:hover{
-  transform:translateY(-3px) scale(1.02);
-  box-shadow:0 6px 18px rgba(0,0,0,0.45),0 0 18px rgba(8,246,255,0.06), inset 0 0 8px rgba(8,246,255,0.02);
+  transform:translateY(-4px) scale(1.04);
+  box-shadow:0 10px 20px rgba(0,0,0,0.45),0 0 20px rgba(8,246,255,0.06), inset 0 0 10px rgba(8,246,255,0.02);
 }
 .cell.win{
-  box-shadow:0 8px 40px rgba(8,246,255,0.12),0 18px 80px rgba(80,0,255,0.08);
-  transform:scale(1.05);
+  box-shadow:0 8px 30px rgba(8,246,255,0.12),0 18px 60px rgba(80,0,255,0.08);
+  transform:scale(1.06);
   background:linear-gradient(180deg, rgba(0,200,220,0.06), rgba(40,10,60,0.12));
   border:2px solid rgba(8,246,255,0.18);
 }
 
-/* ---------- Responsive adjustments ---------- */
-@media (max-width:720px){
-  .app{flex-direction:column; gap:20px;}
-  .sidebar{width:90vw;}
-  #board-wrapper{width:95vw; padding:12px;}
-  #board-wrapper .inner{padding:12px;}
-  .cell{font-size:7vw;}
+/* ---------- Mobile adjustments ---------- */
+@media(max-width:600px){
+  #board{ gap:4px; }
+  .cell{ width:60px; height:60px; font-size:28px; }
+  .sidebar{ width:90vw; }
+} /* ---------- Responsive adjustments ---------- */
+@media screen and (max-width: 600px){
+  .app {
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    padding: 12px;
+  }
+
+  .sidebar {
+    width: 100%;
+    max-height: 40vh; /* limit height */
+    overflow-y: auto;  /* allow scrolling */
+  }
+
+  #board-wrapper {
+    min-width: 90vw;
+    padding: 16px;
+  }
+
+  #board {
+    gap: 6px; /* cells closer */
+    grid-template-columns: repeat(var(--board-size), 1fr); /* responsive columns */
+  }
+
+  .cell {
+    width: calc(90vw / var(--board-size) - 6px);
+    height: calc(90vw / var(--board-size) - 6px);
+    font-size: calc(30px + var(--board-size) * 4px); /* scale font smaller for mobile */
+  }
 }
-
 </style>
+</head>
 <body>
-
-<!-- Scoreboard -->
+<!-- Top scoreboard -->
 <div class="scoreboard-top card" role="status" aria-live="polite">
   <div class="match-info">Round <span id="currentRound">0</span> / <span id="totalRoundsDisp">—</span></div>
   <div class="score-pill">P1: <span id="p1Score">0</span></div>
@@ -288,8 +265,20 @@ button.primary{
       </div>
       <div class="small-muted" style="margin-top:8px">Choose board before starting the match</div>
     </div>
+
     <div>
-      <label>Choose total rounds (Option A)</label>
+      <label>Play vs AI</label>
+      <select id="aiDifficulty" onchange="setAIDifficulty()" style="width:100%;padding:10px;border-radius:8px;background:rgba(255,255,255,0.02);color:#cfefff;border:1px solid rgba(255,255,255,0.06);">
+        <option value="none">Human vs Human</option>
+        <option value="easy">Easy</option>
+        <option value="medium">Medium</option>
+        <option value="hard">Hard</option>
+      </select>
+      <div class="small-muted" style="margin-top:6px">Select AI difficulty or Human vs Human</div>
+    </div>
+
+    <div>
+      <label>Choose total rounds</label>
       <div class="preset-row" id="presetRow">
         <button class="preset-btn" data-val="3" onclick="choosePreset(this)">3</button>
         <button class="preset-btn" data-val="5" onclick="choosePreset(this)">5</button>
@@ -302,40 +291,27 @@ button.primary{
       </div>
       <div class="small-muted" style="margin-top:8px">Pick a preset or enter a custom number, then press <b>Start Match</b>.</div>
     </div>
-        <!-- Board Area -->
-    <div class="board-area">
-      <div id="board-wrapper">
-        <div class="inner card" id="innerWrapper">
-          <div id="board" role="grid" aria-label="game board"></div>
-          <div id="status" style="margin-top:12px; text-align:center; color:var(--muted)">Press Start Match</div>
-        </div>
-      </div>
-    </div>
 
     <div>
       <label>Match controls</label>
-      <div style="display:flex; gap:8px; margin-top:6px; flex-wrap:wrap;">
+      <div style="display:flex; gap:8px; margin-top:6px;">
         <button class="primary" id="startBtn" onclick="startMatch()">Start Match</button>
         <button class="" onclick="fullReset()">Full Reset</button>
       </div>
       <div class="small-muted" style="margin-top:8px">During a match controls are locked. Match ends after the chosen number of rounds.</div>
     </div>
-    <div>
-      <label>Sound</label>
-      <div style="display:flex; gap:8px; flex-wrap:wrap;">
-        <button class="" id="toggleSoundBtn" onclick="toggleSound()">Sound: On</button>
+  </div>
+
+  <!-- Board Area -->
+  <div class="board-area">
+    <div id="board-wrapper">
+      <div class="inner card" id="innerWrapper" style="min-width:320px;">
+        <div id="board" role="grid" aria-label="game board"></div>
+        <div id="status" style="margin-top:12px; text-align:center; color:var(--muted)">Press Start Match</div>
       </div>
     </div>
   </div>
 </div>
-
-<!-- Match Result Modal -->
-<div id="matchResult" role="dialog" aria-modal="true" aria-hidden="true" style="display:none;position:fixed;inset:0;background:rgba(0,0,0,0.7);backdrop-filter:blur(4px);z-index:200;display:flex;flex-direction:column;align-items:center;justify-content:center;color:#e6f7ff;">
-  <h2 id="matchTitle" style="margin-bottom:12px;">Player 1 Wins the Match!</h2>
-  <p id="matchSub" style="margin-bottom:20px;">Final score — P1: <span id="finalP1">0</span> | P2: <span id="finalP2">0</span></p>
-  <button onclick="closeMatchResult()" style="padding:10px 16px;border-radius:10px;background:linear-gradient(90deg,#08f6ff,#3aa8ff);border:none;color:#001518;font-weight:700;">OK — Continue</button>
-</div>
-
 <script>
 /* ---------------- STATE ---------------- */
 let boardSize = 3;
@@ -348,6 +324,7 @@ let matchActive = false;
 let p1Score = 0;
 let p2Score = 0;
 let soundOn = true;
+let aiMode = 'none'; // 'none', 'easy', 'medium', 'hard'
 
 /* Audio */
 const clickSound = new Audio("https://cdn.pixabay.com/download/audio/2022/03/15/audio_8a05bbf400.mp3?filename=click-124467.mp3");
@@ -362,10 +339,17 @@ function setBoardMode(n){
   renderEmptyBoard();
 }
 
+function setAIDifficulty(){
+  const sel = document.getElementById('aiDifficulty');
+  aiMode = sel.value;
+  fullReset();
+}
+
+/* ---------- Board rendering ---------- */
 function renderEmptyBoard(){
   const boardEl = document.getElementById('board');
   boardEl.innerHTML='';
-  boardEl.style.setProperty('--cols', boardSize);
+  document.documentElement.style.setProperty('--board-size', boardSize);
   boardEl.style.gridTemplateColumns = `repeat(${boardSize}, 1fr)`;
   board = Array(boardSize*boardSize).fill('');
   for(let i=0;i<board.length;i++){
@@ -381,7 +365,7 @@ function renderEmptyBoard(){
   document.getElementById('totalRoundsDisp').textContent=(totalRounds>0?totalRounds:'—');
 }
 
-/* ---------- Preset Rounds ---------- */
+/* ---------- Presets / Custom rounds ---------- */
 function choosePreset(btn){
   if(matchActive) return;
   document.querySelectorAll('.preset-btn').forEach(b=>b.classList.remove('active'));
@@ -427,6 +411,7 @@ function lockControls(lock){
   document.getElementById('customRounds').disabled=lock;
   document.getElementById('setRoundsBtn').disabled=lock;
   document.getElementById('startBtn').disabled=lock;
+  document.getElementById('aiDifficulty').disabled=lock;
 }
 
 function fullReset(){
@@ -454,11 +439,17 @@ function startRound(){
   document.getElementById('currentRound').textContent=currentRound;
   document.getElementById('totalRoundsDisp').textContent=totalRounds;
   updateStatus(`Round ${currentRound}/${totalRounds} — ${currentTurn}'s turn`);
+  if(aiMode!=='none' && currentTurn==='O') aiMove();
 }
 
 /* ---------- Gameplay ---------- */
 function cellClick(i){
   if(!matchActive || board[i]!=='') return;
+  if(aiMode!=='none' && currentTurn==='O') return; // prevent player from clicking AI turn
+  makeMove(i);
+}
+
+function makeMove(i){
   board[i]=currentTurn; renderBoard();
   if(soundOn) try{ clickSound.currentTime=0; clickSound.play(); }catch(e){}
   const combo = checkWinnerCombo();
@@ -466,6 +457,7 @@ function cellClick(i){
   if(board.every(v=>v!=='')){ showRoundOutcome(null); return; }
   currentTurn=(currentTurn==='X')?'O':'X';
   updateStatus(`Round ${currentRound}/${totalRounds} — ${currentTurn}'s turn`);
+  if(aiMode!=='none' && currentTurn==='O') setTimeout(aiMove,300);
 }
 
 function renderBoard(){ document.querySelectorAll('.cell').forEach((c,i)=>c.textContent=board[i]); }
@@ -482,7 +474,7 @@ function checkWinnerCombo(){
 
 /* ---------- Highlight & Scoring ---------- */
 function highlightCells(combo){ combo.forEach(i=>document.querySelectorAll('.cell')[i].classList.add('win')); }
-function awardPoint(symbol){ const p1Symbol='X'; if(symbol===p1Symbol)p1Score++; else p2Score++; updateScoresUI(); }
+function awardPoint(symbol){ const p1Symbol=(currentRound%2===1)?'X':'O'; if(symbol===p1Symbol)p1Score++; else p2Score++; updateScoresUI(); }
 function updateScoresUI(){ document.getElementById('p1Score').textContent=p1Score; document.getElementById('p2Score').textContent=p2Score; }
 
 /* ---------- Round End ---------- */
@@ -490,7 +482,7 @@ function showRoundOutcome(symbol){
   if(symbol && soundOn) try{ winSound.currentTime=0; winSound.play(); }catch(e){}
   const wEl=document.getElementById('winnerText');
   if(!symbol) wEl.textContent='Draw';
-  else{ const who=(symbol==='X')?'P1':'P2'; wEl.textContent=`${who} (${symbol}) wins`; }
+  else{ const p1Symbol=(currentRound%2===1)?'X':'O'; const who=(symbol===p1Symbol)?'P1':'P2'; wEl.textContent=`${who} (${symbol}) wins`; }
   wEl.classList.remove('winBounce'); void wEl.offsetWidth; wEl.classList.add('winBounce');
 
   setTimeout(()=>{
@@ -504,15 +496,84 @@ function showRoundOutcome(symbol){
 function showMatchResult(){
   matchActive=false; lockControls(false);
   let title=''; if(p1Score===p2Score) title='Match Drawn'; else title=(p1Score>p2Score)?'Player 1 Wins the Match!':'Player 2 Wins the Match!';
-  document.getElementById('matchTitle').textContent=title;
-  document.getElementById('finalP1').textContent=p1Score;
-  document.getElementById('finalP2').textContent=p2Score;
-  const modal=document.getElementById('matchResult'); modal.style.display='flex'; modal.setAttribute('aria-hidden','false');
+  alert(`${title}\nFinal Score — P1: ${p1Score} | P2: ${p2Score}`);
+  updateStatus('Match finished — press Start Match to play again or Reset to reconfigure.');
 }
 
-function closeMatchResult(){
-  const modal=document.getElementById('matchResult'); modal.style.display='none'; modal.setAttribute('aria-hidden','true');
-  updateStatus('Match finished — press Start Match to play again or Reset to reconfigure.');
+/* ---------- AI logic ---------- */
+function aiMove(){
+  let move=-1;
+  if(aiMode==='easy'){
+    const empty = board.map((v,i)=>v===''?i:null).filter(v=>v!==null);
+    move = empty[Math.floor(Math.random()*empty.length)];
+  } else if(aiMode==='medium'){
+    move = findWinningMove('O');
+    if(move===-1) move = findWinningMove('X');
+    if(move===-1){
+      const empty = board.map((v,i)=>v===''?i:null).filter(v=>v!==null);
+      move = empty[Math.floor(Math.random()*empty.length)];
+    }
+  } else if(aiMode==='hard'){
+    const best = minimax(board,'O');
+    move = best.index;
+  }
+  if(move>=0) makeMove(move);
+}
+
+function findWinningMove(sym){
+  for(let i=0;i<board.length;i++){
+    if(board[i]===''){
+      board[i]=sym;
+      if(checkWinnerCombo()){ board[i]=''; return i; }
+      board[i]='';
+    }
+  }
+  return -1;
+}
+
+function minimax(newBoard,player){
+  const avail = newBoard.map((v,i)=>v===''?i:null).filter(v=>v!==null);
+  const huPlayer = 'X';
+  const aiPlayer = 'O';
+
+  const winnerCheck = checkWinner(newBoard);
+  if(winnerCheck==='X') return {score:-10};
+  if(winnerCheck==='O') return {score:10};
+  if(avail.length===0) return {score:0};
+
+  const moves = [];
+  for(let i=0;i<avail.length;i++){
+    const idx = avail[i];
+    const move = {};
+    move.index=idx;
+    newBoard[idx]=player;
+
+    const result = minimax(newBoard,(player===aiPlayer)?huPlayer:aiPlayer);
+    move.score=result.score;
+
+    newBoard[idx]='';
+    moves.push(move);
+  }
+
+  let bestMove;
+  if(player===aiPlayer){
+    let bestScore=-Infinity;
+    moves.forEach(m=>{ if(m.score>bestScore){ bestScore=m.score; bestMove=m; }});
+    return bestMove;
+  } else {
+    let bestScore=Infinity;
+    moves.forEach(m=>{ if(m.score<bestScore){ bestScore=m.score; bestMove=m; }});
+    return bestMove;
+  }
+}
+
+function checkWinner(bd){
+  const n = boardSize;
+  for(let r=0;r<n;r++){ const line=[]; for(let c=0;c<n;c++) line.push(r*n+c); if(line.every(i=>bd[i]!==''&&bd[i]===bd[line[0]])) return bd[line[0]]; }
+  for(let c=0;c<n;c++){ const line=[]; for(let r=0;r<n;r++) line.push(r*n+c); if(line.every(i=>bd[i]!==''&&bd[i]===bd[line[0]])) return bd[line[0]]; }
+  const diag=[...Array(n).keys()].map(i=>i*(n+1)); if(diag.every(i=>bd[i]!==''&&bd[i]===bd[diag[0]])) return bd[diag[0]];
+  const adiag=[...Array(n).keys()].map(i=>(i+1)*(n-1)); if(adiag.every(i=>bd[i]!==''&&bd[i]===bd[adiag[0]])) return bd[adiag[0]];
+  return null;
 }
 
 /* ---------- Misc ---------- */
